--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
-		"module": "amd",
+		"target": "ES5",
+		"module": "commonjs",
 		"noImplicitAny": false,
 		"removeComments": false,
 		"sourceMap": true
